added creator username to discussion page

--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -1,5 +1,5 @@
 <h3>{{ post.title }}</h3>
-<p>Luotu {{ post.time.strftime("%d.%m.%Y %H:%M") }}</p>
+<p><i>Luonut</i> {{ username }} <i>aikaan</i> {{ post.time.strftime("%d.%m.%Y %H:%M") }}</p>
 
 <p>{{ post.message }}</p>
 <br>
