added new post form on front page

--- a/templates/post_form.html
+++ b/templates/post_form.html
@@ -1,5 +1,6 @@
 <form action="/create" method="POST">
-    Otsikko: <textarea name="title" rows="1" cols="50"></textarea>
+    Otsikko: <br>
+    <textarea name="title" rows="1" cols="50"></textarea>
     <br>
     Viesti: <br>
     <textarea name="message" rows="5" cols="50"></textarea>
