--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,7 @@
 {% for post in posts %}
 <a href="/keskustelu/{{ post.id }}">{{ post.title }}</a>
 <p>Luotu {{ post.time.strftime("%d.%m.%Y %H:%M") }} </p> 
-{% endfor %}
 <hr>
+{% endfor %}
+<br>
+<a href="/uusi">Luo uusi</a>
