--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
-<form action="/" method="POST">
+<form action="/login" method="POST">
 Käyttäjätunnus:
 <input type="text" name="username">
 <br>
 Salasana:
-<input type="text" name="password">
+<input type="password" name="password">
 <br>
 <input type="submit" value="Lähetä">
 </form>
