began working on gruoping discussions by topic in app

--- a/app/templates/discussion.html
+++ b/app/templates/discussion.html
@@ -4,7 +4,7 @@
 <p>{{ post.message }}</p>
 <br>
 {% if session.username %}
-<form action="" method="POST">
+<form action="/posts/{{ post.id }}" method="POST">
     Kommentoi keskustelua <br>
     <textarea name="comment" rows="5" cols="50"></textarea>
     <input type="submit" value="Lähetä">
