--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,22 @@
 
 <br>
 
-<b>Avoimet keskustelut:</b>
+<h2>Keskustelunaiheet:</h2>
 <hr>
-{% for post in posts %}
-<a href="/posts/{{ post.id }}">{{ post.title }}</a>
-<p>Luotu {{ post.time.strftime("%d.%m.%Y %H:%M") }} </p> 
+{% for t in topics %}
+<h2>{{ t.topic }}</h2>
+{{ t.count }} avointa keskustelua 
+<br>
+<h4>
+{% if posts[t.id].title == null %}
+Aihealueella ei ole vielä keskusteluja.
+{% else %}
+Uusin keskustelu:
+<a href="/posts/{{ t.max }}">{{ posts[t.id].title }}</a>
+{% endif %}</h4>
+<br>
+<a href="/topics/{{ t.id }}"> Siirry aiheauleelle</a>
 <hr>
+
 {% endfor %}
 <br>
