added signup link to app and updated readme

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <a href="/logout">Kirjaudu ulos</a></p>
     <a href="/new"></b>Luo keskustelu</b></a>
 {% else %}
-    <a href="/login">Kirjaudu sisään</a>
+    <a href="/login">Kirjaudu sisään</a> tai <a href="/signup">luo uusi käyttäjätunnus</a>
 {% endif %}
 <br>
 
