--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -1,3 +1,7 @@
+{% extends "layout.html" %}
+{% block title %}Uusi käyttäjä{% endblock %}
+{% block content %}
+
 <form action="/signup" method="POST" onsubmit="return check(this)">
     Käyttäjätunnus:
     <input type="text" name="username">
@@ -10,8 +14,9 @@
     <br>
     <input type="submit" value="Lähetä">
 </form>
+<br>
 
-<a href="/">Takaisin</a>
+<a href="/">Takaisin etusivulle</a>
 
 <script>
     function check(form) {
@@ -30,3 +35,5 @@
     return true;
     }
 </script>
+
+{% endblock %}
