added possibility to delete posts and comments, renamed discusions module to posts

--- a/app/templates/adminpage.html
+++ b/app/templates/adminpage.html
@@ -29,7 +29,7 @@ Poista käyttäjiä, tämä ei poista käyttäjän luomia viestejä tai kommentt
 
 <script>
     function areYouSure(form) {
-        return confirm(`Are you sure you want to delete ${form.todelete.value}?`)
+        return confirm(`Haluatko varmasti poistaa ${form.todelete.value}?`)
     }
 
 </script>
