--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -2,6 +2,13 @@
 {% block title %}Uusi käyttäjä{% endblock %}
 {% block content %}
 
+{% if error %}
+    {% if error == "username in use" %}
+        <b>Käyttäjänimi on jo käytössä</b>
+        <br>
+    {% endif %}
+{% endif %}
+
 <form action="/signup" method="POST" onsubmit="return check(this)">
     Käyttäjätunnus:
     <input type="text" name="username">
@@ -20,11 +27,11 @@
 
 <script>
     function check(form) {
-        if (!form.username.value) {
+        if (!form.username.value.trim()) {
             alert("Käyttäjätunnus ei saa olla tyhjä");
             return false;
         }
-        if (!form.password.value) {
+        if (!form.password.value.trim()) {
             alert("Salasana ei saa olla tyhjä");
             return false;
         }
