--- a/app/templates/discussion.html
+++ b/app/templates/discussion.html
@@ -23,6 +23,8 @@
         <input type="submit" value="Lähetä">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
+{% else %}
+    <p><i>Kirjaudu sisään kommentoidaksesi keskustelua.</i></p>
 {% endif %}
 
 <br>
@@ -33,6 +35,7 @@
     <br>
     {{ comment.message }}
     <br>
+    <br>
     {% if comment.username == session.username %}
         <form action="/deletecomment" method="POST" onsubmit="return areYouSureComm()">
             <input type="submit" value="Poista">
@@ -41,8 +44,6 @@
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         </form>
     {% endif %}
-    <br>
-    <br>
 
 {% endfor %}
 <hr>
@@ -56,6 +57,7 @@
             return false;
         }
         if(!form.comment.value) {
+            alert("Viesti ei saa olla tyhjä");
             return false;
         }
     return true;
