--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -10,16 +10,23 @@
 {% endif %}
 
 <form action="/signup" method="POST" onsubmit="return check(this)">
-    Käyttäjätunnus:
-    <input type="text" name="username">
-    <br>
-    Salasana:
-    <input type="password" name="password">
-    <br>
-    Salasana uudelleen:
-    <input type="password" name="password_again">
-    <br>
-    <input type="submit" value="Lähetä">
+    <div class="form-group col-4">
+        <label for="username">Käyttäjätunnus:</label>
+        <input type="text" class="form-control" name="username" required>
+        <small id="passwordHelp" class="form-text text-muted">Käyttäjätunnuksen tulee olla vähintään 3 merkkiä.</small>
+    </div>
+    <div class="form-group col-4">
+        <label for="inputPassword">Salasana:</label>
+        <input type="password" class="form-control" name="password" required>
+        <small id="passwordHelp" class="form-text text-muted">Salasanan tulee olla väh. 4 merkkiä ja sen kannattaa sisältää numeroita ja erikoismerkkejä.</small>
+    </div>
+    <div class="form-group col-4">
+        <label for="inputPassword">Vahvista salasana:</label>
+        <input type="password" class="form-control" name="password_again" required>
+    </div>
+    <div class="form-group col-4">
+        <button type="submit" class="btn btn-primary">Luo käyttäjä</button>
+    </div>
 </form>
 <br>
 
@@ -27,12 +34,12 @@
 
 <script>
     function check(form) {
-        if (!form.username.value.trim()) {
-            alert("Käyttäjätunnus ei saa olla tyhjä");
+        if (form.username.value.trim().length < 3) {
+            alert("Käyttäjätunnus on liian lyhyt");
             return false;
         }
-        if (!form.password.value.trim()) {
-            alert("Salasana ei saa olla tyhjä");
+        if (form.password.value.trim().length <= 3) {
+            alert("Salasana on liian lyhyt");
             return false;
         }
         if (form.password.value !== form.password_again.value) {
