--- a/app/templates/topic.html
+++ b/app/templates/topic.html
@@ -8,7 +8,7 @@
     <p>Käyttäjältä {{ post.username }}</p>
     <p>Luotu {{ post.time.strftime("%d.%m.%Y %H:%M") }} </p> 
     {% if post.message %}
-        <p>Viimeisin viesti lähetetty {{ post.comment_time.strftime("%d.%m.%Y %H:%M") }}: <i>"{{ post.message }}"</i> </p>
+        <p>Viimeisin viesti lähetetty {{ post.comm_time.strftime("%d.%m.%Y %H:%M") }}: <i>"{{ post.message }}"</i> </p>
     {% else %}
         <p>Keskustelussa ei vielä ole vastauksia.</p>
     {% endif %}
