--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -23,14 +23,13 @@
     <div class="form-group col-4">
         <label for="inputPassword">Vahvista salasana:</label>
         <input type="password" class="form-control" name="password_again" minlength="4" required>
+        <small id="confirmPasswordHelp" class="form-text text-muted">Kirjoita salasana uudelleen.</small>
     </div>
     <div class="form-group col-4">
         <button type="submit" class="btn btn-primary">Luo käyttäjä</button>
     </div>
 </form>
 <br>
-
-<a href="/">Takaisin etusivulle</a>
 
 <script>
     function check(form) {
