--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,7 +8,7 @@
     <h1>Keskustelupasta</h1>
 
     <nav class="navbar navbar-expand-sm navbar-light">
-        <a class="navbar-brand" href="/">Paikka keskusteluille</a>
+        <a class="navbar-brand" href="/">Etusivu</a>
         <ul class="navbar-nav">
             {% if session.username %}
                 <li class="nav-item">
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/login">Kirjaudu sisään</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signup">luo uusi käyttäjätunnus</a>
+                    <a class="nav-link" href="/signup">Luo uusi käyttäjätunnus</a>
                 </li>
             {% endif %}
             <li class="nav-item">
