--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,17 +1,23 @@
 {% extends "layout.html" %}
 {% block title %}Log in{% endblock %}
 {% block content %}
+<h3>Kirjaudu sisään</h3>
 <form action="/login" method="POST">
-Käyttäjätunnus:
-<input type="text" name="username">
-<br>
-Salasana:
-<input type="password" name="password">
-<br>
-<input type="submit" value="Lähetä">
+    <div class="form-group col-4">
+        <label for="username">Käyttäjätunnus:</label>
+        <input type="text" class="form-control" name="username" required>
+    </div>
+    
+    <div class="form-group col-4">
+        <label for="inputPassword">Salasana:</label>
+        <input type="password" class="form-control" name="password" required>
+    </div>
+    
+    <br>
+    <div class="form-group col-4">
+        <button type="submit" class="btn btn-primary">Lähetä</button>
+    </div>
 </form>
 <br>
-
-<a href="/">Takaisin etusivulle</a>
 
 {% endblock %}
