--- a/app/templates/discussion.html
+++ b/app/templates/discussion.html
@@ -3,13 +3,13 @@
 {% block content %}
 
 <h3>{{ post.title }}</h3>
-<p><i>Luonut</i> {{ post.username }} <i>aikaan</i> {{ post.time.strftime("%d.%m.%Y %H:%M") }}</p>
+<h6><i>Luonut</i> {{ post.username }} <i>aikaan</i> {{ post.time.strftime("%d.%m.%Y %H:%M") }}</h6>
 
 <p>{{ post.message }}</p>
 <br>
-{% if session.username == post.username %}
+{% if (session.username == post.username) or user_is_admin %}
     <form action="/deletepost" method="POST" onsubmit="return areYouSure()">
-        <input type="submit" value="Poista keskustelu">
+        <input type="submit" class="btn btn-primary" value="Poista keskustelu">
         <input type="hidden" name="post_to_delete" value="{{ post.id }}">
         <input type="hidden" name="to_redirect" value="/topics/{{ post.topic }}">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
@@ -20,7 +20,7 @@
     <form action="/posts/{{ post.id }}" method="POST" onsubmit="return check(this)">
         <i>Kommentoi keskustelua</i> <br>
         <textarea name="comment" rows="5" cols="50" maxlength="5000"></textarea>
-        <input type="submit" value="Lähetä">
+        <input type="submit" class="btn btn-primary" value="Lähetä">
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
     </form>
 {% else %}
@@ -30,15 +30,14 @@
 <br>
 {% for comment in comments %}
     <hr>
-    {{ comment.username }} <i>vastasi aikaan</i> {{ comment.time.strftime("%d.%m.%Y %H:%M") }}:
-    <br>
+    <h6>{{ comment.username }} <i>vastasi</i> {{ comment.time.strftime("%d.%m.%Y %H:%M") }}:</h6>
     <br>
     {{ comment.message }}
     <br>
     <br>
-    {% if comment.username == session.username %}
+    {% if (comment.username == session.username) or user_is_admin %}
         <form action="/deletecomment" method="POST" onsubmit="return areYouSureComm()">
-            <input type="submit" value="Poista">
+            <input type="submit" class="btn btn-primary" value="Poista kommentti">
             <input type="hidden" name="comm_to_delete" value="{{ comment.id }}">
             <input type="hidden" name="to_redirect" value="/posts/{{ post.id }}">
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
@@ -49,6 +48,7 @@
 <hr>
 <br>
 <a href="/topics/{{ post.topic }}">Takaisin alueelle <i>{{ post.topic }}</i></a>
+
 
 <script>
     function check(form) {
@@ -64,10 +64,10 @@
     }
 
     function areYouSure(form) {
-        return confirm(`Haluatko varmasti poistaa tämän keskustelun? Keskustelua ei voi palauttaa poiston jälkeen.`)
+        return confirm(`Haluatko varmasti poistaa tämän keskustelun? Sitä ei voi palauttaa poiston jälkeen.`)
     }
     function areYouSureComm(form) {
-        return confirm(`Haluatko varmasti poistaa kommenttisi? Sitä ei voi palauttaa poiston jälkeen.`)
+        return confirm(`Haluatko varmasti poistaa tämän kommentin? Sitä ei voi palauttaa poiston jälkeen.`)
     }
 </script>
 {% endblock %}
