--- a/app/templates/search_page.html
+++ b/app/templates/search_page.html
@@ -2,7 +2,7 @@
 {% block title %}Luo uusi{% endblock %}
 {% block content %}
 
-Hae sivustolta:
+<h3>Hae sivustolta:</h3>
 
 <form action="/search" method="POST">
     <textarea name="keyword" rows="1" cols="50" maxlength="50" required></textarea>
