--- a/app/templates/create_user.html
+++ b/app/templates/create_user.html
@@ -2,6 +2,7 @@
 {% block title %}Uusi käyttäjä{% endblock %}
 {% block content %}
 
+<h3>Luo uusi käyttäjätunnus</h3>
 {% if error %}
     {% if error == "username in use" %}
         <b>Käyttäjänimi on jo käytössä</b>
@@ -10,22 +11,22 @@
 {% endif %}
 
 <form action="/signup" method="POST" onsubmit="return check(this)">
-    <div class="form-group col-4">
+    <div class="form-group col-10">
         <label for="username">Käyttäjätunnus:</label>
         <input type="text" class="form-control" name="username" maxlength="20" minlength="3" required>
         <small id="passwordHelp" class="form-text text-muted">Käyttäjätunnuksen tulee olla vähintään 3 merkkiä.</small>
     </div>
-    <div class="form-group col-4">
+    <div class="form-group col-10">
         <label for="inputPassword">Salasana:</label>
         <input type="password" class="form-control" name="password" minlength="4" required>
         <small id="passwordHelp" class="form-text text-muted">Salasanan tulee olla väh. 4 merkkiä ja sen kannattaa sisältää numeroita ja erikoismerkkejä.</small>
     </div>
-    <div class="form-group col-4">
+    <div class="form-group col-10">
         <label for="inputPassword">Vahvista salasana:</label>
         <input type="password" class="form-control" name="password_again" minlength="4" required>
         <small id="confirmPasswordHelp" class="form-text text-muted">Kirjoita salasana uudelleen.</small>
     </div>
-    <div class="form-group col-4">
+    <div class="form-group col-10">
         <button type="submit" class="btn btn-primary">Luo käyttäjä</button>
     </div>
 </form>
