--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -39,7 +39,7 @@
         </ul>
     </nav>
     <header class="page-header header container-fluid">
-    <div class="overlay"></div>
+    
     <div class="text-content" >
     
     {% if user_is_admin %}
@@ -58,14 +58,13 @@
     <br>
 
     {% block content%}{% endblock %}
-<hr>
 </div>
 </header>
 </div>
 
 <footer class="footer">
     <div class="container">
-        kakakakakakakakakkak
+        Kuva: Carlos Lopes from Uberaba-MG, Brasil, <a href="https://creativecommons.org/licenses/by-sa/2.0">CC BY-SA 2.0</a>, via Wikimedia Commons
     </div>
 </footer>
 
