--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,7 +1,12 @@
 body {
     padding: 0;
     margin: 0;
-    background: #bd903d;
+    
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6a/La_Pasta_-_Uberaba_%287794990926%29.jpg');
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: visible;
 }
 .navbar {
     background:#7d8664;
@@ -21,22 +26,19 @@ body {
     justify-content: flex-end;
 }
 .header {
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6a/La_Pasta_-_Uberaba_%287794990926%29.jpg');
-    background-size: cover;
-    background-position: center;
     position: relative;
     overflow-y: scroll;
     height: 900px;
-}
-.overlay {
-    position: absolute;
     min-height: 100%;
     min-width: 100%;
     left: 0;
     top: 0;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.8);
 }
 .text-content {
-    position: absolute;
+    position: relative;
     color: #000;
+}
+.footer {
+    background: #bd903d;    
 }
