--- a/app/templates/post_form.html
+++ b/app/templates/post_form.html
@@ -18,7 +18,7 @@
     Viesti: <br>
     <textarea name="message" rows="5" cols="50" maxlength="5000"></textarea>
     <br>
-    <input type="submit" class="btn btn-primary" value="Lähetä">
+    <input type="submit" class="button" value="Lähetä">
     <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
 </form>
 
