--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,19 +3,19 @@
 {% block content %}
 <h3>Kirjaudu sisään</h3>
 <form action="/login" method="POST">
-    <div class="form-group col-10">
+    <div class="form-group col-3">
         <label for="username">Käyttäjätunnus:</label>
         <input type="text" class="form-control" name="username" required>
     </div>
     
-    <div class="form-group col-10">
+    <div class="form-group col-3">
         <label for="inputPassword">Salasana:</label>
         <input type="password" class="form-control" name="password" required>
     </div>
     
     <br>
-    <div class="form-group col-4">
-        <button type="submit" class="btn btn-primary">Lähetä</button>
+    <div class="form-group col-3">
+        <button type="submit" class="button">Lähetä</button>
     </div>
 </form>
 <br>
